# wscrab

./: .gitignore  Cargo.toml  LICENSE  README.md  the-rust-inside.md
.github/workflows/: release.yml
src/: main.rs
tests/: wscrab_cli.rs
