[package]
name = "wscrab"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
futures-util = "0.3.30"
http = "1.1.0"
rustls = "0.23.15"
rustls-pemfile = "2.1.3"
tokio = { version = "1.41.1", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
  "signal",
  "net",
  "time",
  "sync",
] }
tokio-rustls = "0.26.0"
tokio-tungstenite = { version = "0.24.0", features = [
  "rustls-tls-webpki-roots",
] }
webpki-roots = "0.26.7"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.2"
rcgen = "0.13.1"
tempfile = "3.12.0"
